[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-qiskit"
dynamic = [ "version" ]
description = "Prefect workflow integration for Qiskit Primitives."
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "quantum computing", 
    "workflow", 
    "qiskit", 
    "prefect",
]
requires-python = ">=3.10"
authors = [
    { name = "Naoki Kanazawa", email = "knzwnao@jp.ibm.com" }
]
maintainers = [
    { name = "Naoki Kanazawa", email = "knzwnao@jp.ibm.com" }
]
dependencies = [
    # Core dependencies
    "prefect",
    "qiskit>=2.0",
    "aiohttp",
    "nest-asyncio",
    "typing_extensions",
    # vendor: IBM
    "ibm_cloud_sdk_core",
    "qiskit-ibm-runtime>=0.37.0",
    # vendor: Qiskit Aer
    "qiskit-aer",
    "diskcache",
]

[project.urls]
Homepage = "https://github.com/qiskit-community/prefect-qiskit"
Documentation = "https://qiskit-community.github.io/prefect-qiskit/"

[project.optional-dependencies]
dev = [
    "codespell>=2.2.6",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-mock==3.14.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mypy-plugins>=3.2.0",
    "pytest-timeout>=2.3.1",
    "ruff==0.9.6",
    "mypy==1.15.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools_scm]
root = "."
version_scheme = "guess-next-dev"
local_scheme = "release-branch-semver"
write_to = "prefect_qiskit/VERSION.txt"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "E", "F", "UP"]

[tool.ruff.lint.per-file-ignores]
# This file is automatically generated by datamodel-code-generator
"prefect_qiskit/vendors/ibm_quantum/models.py" = ["E501"]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "skip"
python_version = "3.10"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--mypy-only-local-stub"
pythonpath = ["tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 90

[tool.coverage.run]
branch = true
source = ["prefect_qiskit"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
